ConnexoProject/force-app/main/default/objects/Approved_Product__c/Approved_Product__c.object-meta.xml
<CustomObject>
    <description>Custom object to store approved products for a site</description>
    <label>Approved Product</label>
    <nameField>
        <label>Approved Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>