ConnexoProject/force-app/main/default/objects/Approved_Product__c/fields/Manufacturer_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer Site</label>
    <referenceTo>CMPL123QMS__Customer_Site__c</referenceTo>
    <relationshipLabel>Approved Products</relationshipLabel>
    <relationshipName>Approved_Products</relationshipName>
    <type>Lookup</type>
</CustomField>