ConnexoProject/force-app/main/default/objects/Approved_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>CMPL123__Product__c</referenceTo>
    <relationshipLabel>Approved Products</relationshipLabel>
    <relationshipName>Approved_Products</relationshipName>
    <type>Lookup</type>
</CustomField>