ConnexoProject/force-app/main/default/objects/Approved_Product__c/fields/Product_Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Disposition_Status__c</fullName>
    <formula>TEXT(Product__r.Disposition_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Disposition Status</label>
    <type>Text</type>
</CustomField>