ConnexoProject/force-app/main/default/objects/Approved_Product__c/fields/Supplier_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product_ID__c</fullName>
    <label>Supplier Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>