ConnexoProject/force-app/main/default/objects/Approved_Product__c/recordTypes/Approved_Product.recordType-meta.xml
<RecordType>
    <fullName>Approved_Product</fullName>
    <active>true</active>
    <label>Approved Product</label>
</RecordType>